<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haldny.estudo.mvp.game.view.GameActivity">

    <Button
        android:id="@+id/buttonTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonTeamB"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/buttonTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Team B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonTeamA"
        app:layout_constraintTop_toTopOf="@+id/buttonTeamA" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTeamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTeamA"
        app:layout_constraintEnd_toEndOf="@+id/buttonTeamA"
        app:layout_constraintStart_toStartOf="@+id/buttonTeamA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTeamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTeamB"
        app:layout_constraintEnd_toEndOf="@+id/buttonTeamB"
        app:layout_constraintStart_toStartOf="@+id/buttonTeamB"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
